--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,14 @@
         "anax/textfilter": "^1.0",
         "symfony/yaml": "^3.3",
         "mos/cimage": "^0.7.19",
-        "anax/database": "^1.1"
+        "anax/database": "^1.1",
+        "anax/di": "^1.0",
+        "anax/page": "^1.0"
     },
     "autoload": {
         "psr-4": {
-            "Anax\\": "src/"
+            "Anax\\": "src/",
+            "Alvo\\": "src/"
         }
     },
     "name": "alvo16/anax",
