--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "anax/database": "^1.1",
         "anax/di": "^1.0",
         "anax/page": "^1.0",
-        "anax/htmlform": "^1.0"
+        "anax/htmlform": "^1.0",
+        "alvo/comment": "^1.3"
     },
     "autoload": {
         "psr-4": {
